--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>自己紹介</title>
+</head>
+<body>
+  <h1>名前</h1>
+    <p>篠田匡佑</p>
+  <h1>趣味</h1>
+    <ul>サッカー観戦（海外）</ul>
+    <ul>温泉旅行</ul>
+</body>
+</html>
+© 2022 GitHub, Inc.
+Terms
+Privacy
 
