--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>自己紹介</title>
+  <title>初サイト作成</title>
 </head>
 <body>
   <h1>名前</h1>
-    <p>篠田匡佑</p>
+    <p>ひょうすきー</p>
   <h1>趣味</h1>
     <ul>サッカー観戦（海外）</ul>
     <ul>温泉旅行</ul>
