--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- Navigation-->
+        <!-- ナビゲーション-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
@@ -180,7 +180,7 @@
                 </div>
             </div>
         </section>
-        <!-- About-->
+        <!-- 概要-->
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
