--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- ナビゲーション-->
+        <!-- navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
@@ -27,11 +27,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#1サービス">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#ポートフォリオ">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#概要">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#チーム">Team</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#連絡">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -180,7 +180,7 @@
                 </div>
             </div>
         </section>
-        <!-- 概要-->
+        <!-- about-->
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
