--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#1サービス">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#ポートフォリオ">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#概要">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#チーム">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#連絡">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#サービス">サービス</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#ポートフォリオ">ポートフォリオ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#概要">概要</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#チーム">チーム</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#連絡">連絡</a></li>
                     </ul>
                 </div>
             </div>
@@ -40,7 +40,7 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-subheading">ようこそ私のポートフォリオへ!</div>
-                <div class="masthead-heading text-uppercase">初のポーtフォリオ作成</div>
+                <div class="masthead-heading text-uppercase">初のポートフォリオ作成</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
             </div>
         </header>
