--- a/index.html
+++ b/index.html
@@ -544,11 +544,11 @@
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
-                                            Southwest
+                                            うちの犬
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Website Design
+                                            ランちゃん
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
