--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/IMG_20200323_122840.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
+                                <div class="portfolio-caption-heading">うちの犬</div>
                                 <div class="portfolio-caption-subheading text-muted">Website Design</div>
                             </div>
                         </div>
