--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">ようこそ私のポートフォリオへ!</div>
-                <div class="masthead-heading text-uppercase">初のポートフォリオ作成</div>
+                <div class="masthead-subheading">篠田のポートフォリオ</div>
+                <div class="masthead-heading text-uppercase">ソロツーリング記録</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
             </div>
         </header>
